prevent nav jumping when clicked

--- a/wp-content/themes/Avada-Child-Theme/style.css
+++ b/wp-content/themes/Avada-Child-Theme/style.css
@@ -541,7 +541,7 @@ body {
   margin-left: -252px;
 }
 .fusion-main-menu-search {
-  max-width: 18px;
+  max-width: 16px;
 }
 .fusion-main-menu-search-open,
 .fusion-custom-menu-item-contents {
